remove unnecessary text

--- a/codec.html
+++ b/codec.html
@@ -5,14 +5,14 @@
 <div class="wrapper">
     <div class="filter">
         <label for="containerFilter" class="filter__item">
-            <span>container filter</span>
+            <span>container</span>
             <select name="containerFilter" id="containerFilterSelect">
                 <option value="mp4" selected>mp4</option>
                 <option value="webm">webm</option>
             </select>
         </label>
         <label for="codecFilter" class="filter__item">
-            <span>codec filter</span>
+            <span>codec</span>
             <select name="codecFilter" id="codecFilterSelect">
                 <option value="avc" selected>avc</option>
                 <option value="vp9">vp9</option>
