--- a/codec.html
+++ b/codec.html
@@ -5,41 +5,70 @@
 <div class="wrapper">
     <div class="filter">
         <label for="containerFilter" class="filter__item">
-            <span>container</span>
-            <select name="containerFilter" id="containerFilterSelect">
+            <div class="filter__label">container</div>
+            <select name="containerFilter" id="containerFilter">
                 <option value="mp4" selected>mp4</option>
                 <option value="webm">webm</option>
             </select>
         </label>
         <label for="codecFilter" class="filter__item">
-            <span>codec</span>
-            <select name="codecFilter" id="codecFilterSelect">
+            <div class="filter__label">codec</div>
+            <select name="codecFilter" id="codecFilter">
                 <option value="avc" selected>avc</option>
                 <option value="vp9">vp9</option>
                 <option value="av1">av1</option>
             </select>
         </label>
+        <label for="framerateFilter" class="filter__item">
+            <div class="filter__label">framerate</div>
+            <select name="framerateFilter" id="framerateFilter">
+                <option value="30" selected>30</option>
+                <option value="60">60</option>
+                <option value="120">120</option>
+            </select>
+        </label>
+        <label for="resolutionFilter" class="filter__item">
+            <div class="filter__label">resolution</div>
+            <select name="resolutionFilter" id="resolutionFilter">
+                <option value="480">480</option>
+                <option value="720">720</option>
+                <option value="1080" selected>1080</option>
+                <option value="4320">4320</option>
+            </select>
+        </label>
+        <label for="bitrateFilter" class="filter__item">
+            <div class="filter__label">bitrate</div>
+            <select name="bitrateFilter" id="bitrateFilter">
+                <option value="40000">40000</option>
+                <option value="75000">75000</option>
+                <option value="120000" selected>120000</option>
+                <option value="600000">600000</option>
+            </select>
+        </label>
         <label for="supportedFilter" class="filter__item">
-            <span>supported filter</span>
-            <select name="supportedFilter" id="supportedFilterSelect">
+            <div class="filter__label">supported filter</div>
+            <select name="supportedFilter" id="supportedFilter">
                 <option value="">-</option>
                 <option value="onlySupported">only supported</option>
                 <option value="onlySupportedKeySystem">only supported key system</option>
             </select>
         </label>
         <label for="levelFilter" class="filter__item">
-            <span>level filter</span>
-            <select name="levelFilter" id="levelFilterSelect">
+            <div class="filter__label">level filter</div>
+            <select name="levelFilter" id="levelFilter">
                 <option value="">-</option>
-                <option value="6">6</option>
-                <option value="5">5</option>
-                <option value="4">4</option>
-                <option value="3">3</option>
-                <option value="2">2</option>
                 <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
             </select>
         </label>
-        <div class="length">result: <span id="howMany"></span></div>
+        <div class="length">
+            <div class="filter__label">result</div>
+            <div id="howMany"></div>
+        </div>
     </div>
 
     <table class="codecTable">
@@ -49,8 +78,8 @@
                 <th>MIME Type</th>
                 <th>supported</th>
                 <th>smooth</th>
-                <th>power efficient</th>
-                <th>key system access</th>
+                <th>power<br />efficient</th>
+                <th>key system<br/>access</th>
             </tr>
         </thead>
         <tbody id="result"></tbody>
