add reset button

--- a/codec.html
+++ b/codec.html
@@ -4,6 +4,10 @@
 
 <div class="wrapper">
     <div class="filter">
+        <label for="reset" class="filter__item">
+            <div class="filter__label">reset</div>
+            <button id="resetBtn">reset</button>
+        </label>
         <label for="containerFilter" class="filter__item">
             <div class="filter__label">container</div>
             <select name="containerFilter" id="containerFilter">
