update page title

--- a/codec.html
+++ b/codec.html
@@ -1,8 +1,9 @@
-<title>video codec check</title>
+<title>let me watch</title>
 <script src="./js/codec.js" type="module"></script>
 <link rel="stylesheet" href="./style.css">
 
 <div class="wrapper">
+    <div class="title"><h1>let me watch</h1></div>
     <div class="filter">
         <label for="reset" class="filter__item">
             <div class="filter__label">reset</div>
@@ -50,7 +51,7 @@
             </select>
         </label>
         <label for="supportedFilter" class="filter__item">
-            <div class="filter__label">supported filter</div>
+            <div class="filter__label">supported</div>
             <select name="supportedFilter" id="supportedFilter">
                 <option value="">-</option>
                 <option value="onlySupported">only supported</option>
@@ -58,7 +59,7 @@
             </select>
         </label>
         <label for="levelFilter" class="filter__item">
-            <div class="filter__label">level filter</div>
+            <div class="filter__label">level</div>
             <select name="levelFilter" id="levelFilter">
                 <option value="">-</option>
                 <option value="1">1</option>
