--- a/video_codec.html
+++ b/video_codec.html
@@ -1,5 +1,5 @@
 <title>let me watch</title>
-<script src="./js/codec.js" type="module"></script>
+<script src="./js/video_codec.js" type="module"></script>
 <link rel="stylesheet" href="./style.css">
 
 <div class="title">
