--- a/audio_codec.html
+++ b/audio_codec.html
@@ -1,6 +1,6 @@
 <title>let me watch</title>
-<script src="./js/video_codec.js" type="module"></script>
-<link rel="stylesheet" href="./css/style.css">
+<script src="./js/codec.js" type="module"></script>
+<link rel="stylesheet" href="./style.css">
 
 <div class="title">
     <div class="wrapper">
